YAML-STANTARD/ppgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pgadmin
  strategy: {}
  template:
    metadata:
      labels:
        name: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              valueFrom:
                configMapKeyRef:
                  name: pg-config
                  key: PGADMIN_DEFAULT_EMAIL
            - name: PGADMIN_DEFAULT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: pg-secret
                  key: PGADMIN_DEFAULT_PASSWORD
          image: dpage/pgadmin4
          name: pgadmin
          ports:
            - containerPort: 80
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    name: pgadmin
status:
  loadBalancer: {}
